[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
rand = "0.8"
regex = "1.3"
futures = "0.3"
once_cell = "1"

[lib]
doctest = false
test = true
